# workshop_eval_iagen

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
app/: README.md  __init__.py  cli.py  config.py  embeddings.py  llm.py  models.py  prompts.py  rag_agent.py  retrieval.py  tools.py
app/data/: service_status.json
app/data/knowledge_base/: antivirus.md  email.md  laptop_setup.md  mfa.md  onboarding.md  password_reset.md  printing.md  security_basics.md  ticketing.md  vpn.md  wifi.md
app/sample_inputs/: smoke_questions.csv
docs/: 00-overview.md  01-setup.md  02-foundations.md  03-industrialization.md  04-production.md  index.md
eval/common/: app_runner.py  config.py  dataset_loader.py  deepeval_client.py  deepeval_model.py  file_utils.py  langfuse_client.py  result_utils.py  trace_utils.py
eval/solutions/step1/: run_smoke_eval_solution.py
eval/solutions/step2/: basic_eval_examples_solution.py
eval/solutions/step3/: deterministic_metric_solution.py  deterministic_metrics_solution.py  grounding_metrics_solution.py  (+6 more)
eval/step1_setup/: run_smoke_eval.py
eval/step2_foundations/: basic_eval_examples.py
eval/step3_industrialization/: judge_metrics.py  test_pipeline_v1.py  test_pipeline_v2.py  test_pipeline_v3.py
eval/step4_production/: experiment_runner.py  export_traces.py  import_traces_to_dataset.py  judge_metrics.py  judge_pipeline.py  langfuse_integration.py  promote_dataset_to_langfuse.py  run_langfuse_experiment.py  traces_to_csv.py
scripts/: check_env.py  verify_workshop.py
(+23 files in other folders)
