[project]
name = "genai-eval-workshop"
version = "0.1.0"
description = "Workshop pratique d'evaluation GenAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepeval>=4.0.7",
  "langfuse>=3.0.0",
  "openai>=1.40.0",
  "pandas>=3.0.4",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
